(Java parte 6: Conhecendo o java.util) As classes Wrappers: Métodos da classe Integer